# nexus

./: .env  .env.sample  Cargo.toml  Dockerfile  Makefile
libs/yrs/: Cargo.toml
libs/yrs/src/: block.rs  doc.rs  lib.rs  store.rs  undo.rs  update.rs
libs/yrs/src/sync/: mod.rs  protocol.rs
libs/yrs/src/types/: array.rs  map.rs  mod.rs  text.rs  weak.rs  xml.rs
libs/yrs/src/updates/: decoder.rs  encoder.rs
src/: application.rs  config.rs  main.rs  state.rs
src/backup/: config.rs  connection.rs  debounce.rs  document.rs  mod.rs  nexus.rs  types.rs
src/core/: channel.rs  config.rs  connection.rs  debounce.rs  document.rs  errors.rs  messages.rs  mod.rs  nexus.rs  types.rs
src/extension/: database.rs  extension_pg.rs  mod.rs  store.rs
src/utils/: env_util.rs
