[package]
name = "nexus"
version = "0.1.0"
edition = "2024"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true


[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
yrs = { path = "libs/yrs", features = ["sync"] }
async-trait = "0.1.89"
uuid = { version = "1.19.0", features = ["v4"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
tracing.workspace = true
futures = "0.3.31"
axum = { version = "0.8.7", features = ["ws"] }
serde.workspace = true
thiserror = "2.0.17"
parking_lot = "0.12.5"
tower-http = { version = "0.6.8", features = ["trace"] }
chrono = "0.4.42"
base64 = "0.22.1"
dotenvy = "0.15.7"
moka = { version = "0.12.11", features = ["future"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

[workspace]
members = ["libs/yrs"]

[workspace.dependencies]
serde = { version = "1.0.225", features = ["derive", "rc"] }
tracing = { version = "0.1", features = ["log"] }
