[package]
name = "yrs"
version = "0.1.0"
edition = "2024"

[features]
default = []
weak = []
sync = []

[dependencies]
thiserror = "2"
fastrand = { version = "2", features = ["js"] }
smallstr = { version = "0.3", features = ["union"] }
smallvec = { version = "1.13", features = ["union", "const_generics", "const_new"] }
async-lock = "3.4"
async-trait = "0.1"
arc-swap = "1.7"
serde.workspace = true
serde_json = "1.0"
dashmap = "6.0"
proptest = "1.2"
proptest-derive = "0.7.0"
rand = "0.9.2"
assert_matches2 = "0.1"
uuid = "1.16.0"
tracing.workspace = true

[lib]
name = "yrs"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

